==> SupernovaRocketry/TestStand-ESP-IDF/components/esp-idf-sx126x/ra01s.c <==
#include "ra01s.h"
#define TAG "RA01S"
#define delayMicroseconds(us) esp_rom_delay_us(us)
#define delay(ms)             esp_rom_delay_us(ms * 1000)

void Reset(sx126x_handle_t handle) {
    delay(10);
    gpio_set_level(handle->dev_config.reset, 0);
    delay(20);
    gpio_set_level(handle->dev_config.reset, 1);
    delay(10);
    // ensure BUSY is low (state meachine ready)
    WaitForIdle(handle, BUSY_WAIT, "Reset", true);
}

void SetRx(sx126x_handle_t handle, uint32_t timeout) {
    if (handle->debugPrint) {
        ESP_LOGI(TAG, "----- SetRx timeout=%" PRIu32, timeout);
    }
    SetStandby(handle, SX126X_STANDBY_RC);
    SetRxEnable(handle);
    uint8_t buf[3];
    buf[0] = (uint8_t)((timeout >> 16) & 0xFF);
    buf[1] = (uint8_t)((timeout >> 8) & 0xFF);
    buf[2] = (uint8_t)(timeout & 0xFF);
    WriteCommand(handle, SX126X_CMD_SET_RX, buf, 3); // 0x82

    for (int retry = 0; retry < 10; retry++) {
        if ((GetStatus(handle) & 0x70) == 0x50)
            break;
        delay(1);
    }
    if ((GetStatus(handle) & 0x70) != 0x50) {
        ESP_LOGE(TAG, "SetRx Illegal Status");
        LoRaError(ERR_INVALID_SETRX_STATE);
    }
}

void SetRxEnable(sx126x_handle_t handle) {
    if (handle->debugPrint) {
        ESP_LOGI(TAG, "SetRxEnable:SX126x_TXEN=%d SX126x_RXEN=%d", handle->dev_config.txen, handle->dev_config.rxen);
    }
    if ((handle->dev_config.txen != -1) && (handle->dev_config.rxen != -1)) {
        gpio_set_level(handle->dev_config.rxen, HIGH);
        gpio_set_level(handle->dev_config.txen, LOW);
    }
}

void SetTx(sx126x_handle_t handle, uint32_t timeoutInMs) {
    if (handle->debugPrint) {
        ESP_LOGI(TAG, "----- SetTx timeoutInMs=%" PRIu32, timeoutInMs);
    }
    SetStandby(handle, SX126X_STANDBY_RC);
    SetTxEnable(handle);
    uint8_t  buf[3];
    uint32_t tout = timeoutInMs;
    if (timeoutInMs != 0) {
        uint32_t timeoutInUs = timeoutInMs * 1000;
        tout                 = (uint32_t)(timeoutInUs / 0.015625);
    }
    if (handle->debugPrint) {
        ESP_LOGI(TAG, "SetTx timeoutInMs=%" PRIu32 " tout=%" PRIu32, timeoutInMs, tout);
    }
    buf[0] = (uint8_t)((tout >> 16) & 0xFF);
    buf[1] = (uint8_t)((tout >> 8) & 0xFF);
    buf[2] = (uint8_t)(tout & 0xFF);
    WriteCommand(handle, SX126X_CMD_SET_TX, buf, 3); // 0x83

    for (int retry = 0; retry < 10; retry++) {
        if ((GetStatus(handle) & 0x70) == 0x60)
            break;
        vTaskDelay(1);
    }
    if ((GetStatus(handle) & 0x70) != 0x60) {
        ESP_LOGE(TAG, "SetTx Illegal Status");
        LoRaError(ERR_INVALID_SETTX_STATE);
    }
}

void SetTxEnable(sx126x_handle_t handle) {
    if (handle->debugPrint) {
        ESP_LOGI(TAG, "SetTxEnable:SX126x_TXEN=%d SX126x_RXEN=%d", handle->dev_config.txen, handle->dev_config.rxen);
    }
    if ((handle->dev_config.txen != -1) && (handle->dev_config.rxen != -1)) {
        gpio_set_level(handle->dev_config.rxen, LOW);
        gpio_set_level(handle->dev_config.txen, HIGH);
    }
}

bool WaitForIdle(sx126x_handle_t handle, unsigned long timeout, char *text, bool stop) {
    bool       ret   = true;
    TickType_t start = xTaskGetTickCount();
    // delayMicroseconds(1);
    while (xTaskGetTickCount() - start < (timeout / portTICK_PERIOD_MS)) {
        if (gpio_get_level(handle->dev_config.busy) == 0)
            break;
        // delayMicroseconds(1);
        //  Give up CPU execution rights
        vTaskDelay(1);
    }
    if (gpio_get_level(handle->dev_config.busy)) {
        if (stop) {
            ESP_LOGE(TAG, "WaitForIdle Timeout text=%s timeout=%lu start=%" PRIu32, text, timeout, start);
            LoRaError(ERR_IDLE_TIMEOUT);
        } else {
            ESP_LOGW(TAG, "WaitForIdle Timeout text=%s timeout=%lu start=%" PRIu32, text, timeout, start);
            ret = false;
        }
    }
    return ret;
}

uint8_t ReadBuffer(sx126x_handle_t handle, uint8_t *rxData, int16_t rxDataLen) {
    uint8_t offset        = 0;
    uint8_t payloadLength = 0;
    GetRxBufferStatus(handle, &payloadLength, &offset);
    if (payloadLength > rxDataLen) {
        ESP_LOGW(TAG, "ReadBuffer rxDataLen too small. payloadLength=%d rxDataLen=%d", payloadLength, rxDataLen);
        return 0;
    }

    // ensure BUSY is low (state meachine ready)
    WaitForIdle(handle, BUSY_WAIT, "start ReadBuffer", true);

    // start transfer
    uint8_t *buf;
    buf = malloc(payloadLength + 3);
    if (buf != NULL) {
        buf[0] = SX126X_CMD_READ_BUFFER; // 0x1E
        buf[1] = offset;                 // offset in rx fifo
        buf[2] = SX126X_CMD_NOP;
        memset(&buf[3], SX126X_CMD_NOP, payloadLength);
        spi_read_byte(handle, buf, buf, payloadLength + 3);
        memcpy(rxData, &buf[3], payloadLength);
        free(buf);
    } else {
        ESP_LOGE(TAG, "ReadBuffer malloc fail");
        payloadLength = 0;
    }

    // wait for BUSY to go low
    WaitForIdle(handle, BUSY_WAIT, "end ReadBuffer", false);

    return payloadLength;
}

void WriteBuffer(sx126x_handle_t handle, uint8_t *txData, int16_t txDataLen) {
    // ensure BUSY is low (state meachine ready)
    WaitForIdle(handle, BUSY_WAIT, "start WriteBuffer", true);

    // start transfer
    uint8_t *buf;
    buf = malloc(txDataLen + 2);
    if (buf != NULL) {
        buf[0] = SX126X_CMD_WRITE_BUFFER; // 0x0E
        buf[1] = 0;                       // offset in tx fifo
        memcpy(&buf[2], txData, txDataLen);
        spi_write_byte(handle, buf, txDataLen + 2);
        free(buf);
    } else {
        ESP_LOGE(TAG, "WriteBuffer malloc fail");
    }

    // wait for BUSY to go low
    WaitForIdle(handle, BUSY_WAIT, "end WriteBuffer", false);
}

void WriteRegister(sx126x_handle_t handle, uint16_t reg, uint8_t *data, uint8_t numBytes) {
    WaitForIdle(handle, BUSY_WAIT, "start WriteRegister", true);

    if (handle->debugPrint) {
        ESP_LOGI(TAG, "WriteRegister: REG=0x%02x", reg);
        for (uint8_t n = 0; n < numBytes; n++) {
            ESP_LOGI(TAG, "DataOut:%02x ", data[n]);
        }
    }

    uint8_t *buf = malloc(numBytes + 3);
    if (buf != NULL) {
        buf[0] = SX126X_CMD_WRITE_REGISTER;
        buf[1] = (reg & 0xFF00) >> 8;
        buf[2] = reg & 0xFF;
        memcpy(&buf[3], data, numBytes);
        spi_write_byte(handle, buf, numBytes + 3);
        free(buf);
    } else {
        ESP_LOGE(TAG, "WriteRegister malloc fail");
    }

    WaitForIdle(handle, BUSY_WAIT, "end WriteRegister", false);
}

void ReadRegister(sx126x_handle_t handle, uint16_t reg, uint8_t *data, uint8_t numBytes) {
    WaitForIdle(handle, BUSY_WAIT, "start ReadRegister", true);

    if (handle->debugPrint) {
        ESP_LOGI(TAG, "ReadRegister: REG=0x%02x", reg);
    }

    uint8_t *buf = malloc(numBytes + 4);
    if (buf != NULL) {
        memset(buf, SX126X_CMD_NOP, numBytes + 4);
        buf[0] = SX126X_CMD_READ_REGISTER;
        buf[1] = (reg & 0xFF00) >> 8;
        buf[2] = reg & 0xFF;
        spi_read_byte(handle, buf, buf, numBytes + 4);
        memcpy(data, &buf[4], numBytes);
        if (handle->debugPrint) {
            for (uint8_t n = 0; n < numBytes; n++) {
                ESP_LOGI(TAG, "DataIn:%02x ", data[n]);
            }
        }
        free(buf);
    } else {
        ESP_LOGE(TAG, "ReadRegister malloc fail");
    }

    WaitForIdle(handle, BUSY_WAIT, "end ReadRegister", false);
}

void WriteCommand(sx126x_handle_t handle, uint8_t cmd, uint8_t *data, uint8_t numBytes) {
    uint8_t status;
    for (int retry = 1; retry < 10; retry++) {
        status = WriteCommand2(handle, cmd, data, numBytes);
        ESP_LOGD(TAG, "status=%02x", status);
        if (status == 0)
            break;
        ESP_LOGW(TAG, "WriteCommand2 status=%02x retry=%d", status, retry);
    }
    if (status != 0) {
        ESP_LOGE(TAG, "SPI Transaction error:0x%02x", status);
        LoRaError(ERR_SPI_TRANSACTION);
    }
}

uint8_t WriteCommand2(sx126x_handle_t handle, uint8_t cmd, uint8_t *data, uint8_t numBytes) {
    WaitForIdle(handle, BUSY_WAIT, "start WriteCommand2", true);

    if (handle->debugPrint) {
        ESP_LOGI(TAG, "WriteCommand: CMD=0x%02x", cmd);
    }

    uint8_t status = 0;

    uint8_t *buf = malloc(numBytes + 1);
    if (buf != NULL) {
        buf[0] = cmd;
        memcpy(&buf[1], data, numBytes);
        spi_read_byte(handle, buf, buf, numBytes + 1);

        uint8_t cmd_status = buf[1] & 0x0E;
        switch (cmd_status) {
        case SX126X_STATUS_CMD_TIMEOUT:
        case SX126X_STATUS_CMD_INVALID:
        case SX126X_STATUS_CMD_FAILED:
            status = cmd_status;
            break;
        case 0:
        case 7:
            status = SX126X_STATUS_SPI_FAILED;
            break;
        default:
            break; // success
        }

        free(buf);
    } else {
        ESP_LOGE(TAG, "WriteCommand2 malloc fail");
        status = SX126X_STATUS_SPI_FAILED;
    }

    WaitForIdle(handle, BUSY_WAIT, "end WriteCommand2", false);
    return status;
}

void ReadCommand(sx126x_handle_t handle, uint8_t cmd, uint8_t *data, uint8_t numBytes) {
    WaitForIdleBegin(handle, BUSY_WAIT, "start ReadCommand");

    if (handle->debugPrint) {
        ESP_LOGI(TAG, "ReadCommand: CMD=0x%02x", cmd);
    }

    uint8_t *buf = malloc(numBytes + 1);
    if (buf != NULL) {
        memset(buf, SX126X_CMD_NOP, numBytes + 1);
        buf[0] = cmd;
        spi_read_byte(handle, buf, buf, numBytes + 1);
        if (data != NULL && numBytes)
            memcpy(data, &buf[1], numBytes);
        free(buf);
    } else {
        ESP_LOGE(TAG, "ReadCommand malloc fail");
    }

    vTaskDelay(1);
    WaitForIdle(handle, BUSY_WAIT, "end ReadCommand", false);
}
